fix: z-index issue

--- a/src/components/Game/PlaysEvents/PlaysEvents.module.scss
+++ b/src/components/Game/PlaysEvents/PlaysEvents.module.scss
@@ -14,6 +14,7 @@
   width: 0;
   height: 2px;
   background-color: var(--side-color);
+	z-index: 5;
 }
 
 .blueTopLoad::before {
